--- a/GhostKey/Info.plist
+++ b/GhostKey/Info.plist
@@ -4,5 +4,14 @@
 <dict>
 	<key>LSUIElement</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>GhostKey needs accessibility access to type authentication codes.</string>
 </dict>
 </plist>
