--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,9 @@ on:
       - '.gitignore'
       - 'LICENSE'
 
+permissions:
+  contents: write
+
 jobs:
   build-and-release:
     runs-on: macos-15
@@ -18,6 +21,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Read version
       id: version
@@ -85,7 +89,22 @@ jobs:
         # Copy app to distribution directory
         cp -R "$APP_PATH" ./dist/GhostKey.app
         
-        echo "✅ App bundle prepared"
+        # Ensure executable has correct permissions
+        echo "🔧 Setting executable permissions..."
+        chmod +x ./dist/GhostKey.app/Contents/MacOS/GhostKey
+        
+        # Verify bundle structure
+        echo "📋 Verifying bundle structure..."
+        if [ ! -f "./dist/GhostKey.app/Contents/MacOS/GhostKey" ]; then
+          echo "❌ Executable not found!"
+          exit 1
+        fi
+        if [ ! -f "./dist/GhostKey.app/Contents/Info.plist" ]; then
+          echo "❌ Info.plist not found!"
+          exit 1
+        fi
+        
+        echo "✅ App bundle prepared and verified"
     
     - name: Create ZIP archive
       if: steps.check_tag.outputs.exists == 'false'
@@ -158,14 +177,22 @@ jobs:
         1. **DMG (Recommended)**: Download `GhostKey-${{ steps.version.outputs.version }}.dmg`, open it, and drag GhostKey to your Applications folder
         2. **ZIP**: Download `GhostKey-${{ steps.version.outputs.version }}.zip`, extract it, and move GhostKey.app to your Applications folder
         
-        ### 🔒 Security
+        ### 🔒 Important: Opening the App
         
-        This build is **not code-signed**. On first launch:
-        1. Right-click (or Control-click) on GhostKey.app
-        2. Select "Open" from the menu
-        3. Click "Open" in the dialog that appears
+        This build is **not code-signed or notarized**. macOS Gatekeeper will block it by default.
         
-        Alternatively, you can build from source following the [README](https://github.com/rdpr/ghostkey#building-from-source).
+        **Required step to open the app**:
+        
+        Open Terminal and run this command:
+        ```bash
+        xattr -d com.apple.quarantine /Applications/GhostKey.app
+        ```
+        
+        Then double-click GhostKey.app to open it normally.
+        
+        > **Note**: This removes the quarantine flag that macOS adds to downloaded apps. You only need to do this once.
+        
+        **Alternative**: Build from source following the [README](https://github.com/rdpr/ghostkey#building-from-source).
         
         ### ✅ Checksums
         
@@ -194,9 +221,12 @@ jobs:
       run: |
         echo "🏷️  Creating tag v${{ steps.version.outputs.version }}..."
         git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git tag -a "v${{ steps.version.outputs.version }}" -m "Release v${{ steps.version.outputs.version }}"
-        git push origin "v${{ steps.version.outputs.version }}"
+        
+        # Push tag using HTTPS with token
+        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git "v${{ steps.version.outputs.version }}"
+        
         echo "✅ Tag created and pushed"
     
     - name: Create GitHub Release
@@ -204,7 +234,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         tag_name: v${{ steps.version.outputs.version }}
-        name: GhostKey v${{ steps.version.outputs.version }}
+        name: v${{ steps.version.outputs.version }}
         body_path: release_notes.md
         draft: false
         prerelease: false
