feat: implement Sparkle auto-update system
Major Changes:
- Integrate Sparkle framework via Swift Package Manager for automatic updates
- Add complete update management system with graceful fallback for dev builds
- Automate appcast.xml generation and EdDSA signing in release workflow

Core Implementation:
- Add UpdateManager.swift with Sparkle integration and SPUUpdaterDelegate
- Initialize updater on app launch with error handling
- Add 'Check for Updates...' menu item in status bar
- Gracefully handle missing public keys in development builds

Configuration:
- Update Info.plist with Sparkle configuration keys
  - SUFeedURL pointing to GitHub-hosted appcast.xml
  - SUEnableAutomaticChecks for automatic update checks (every 24 hours)
  - SUAllowsAutomaticUpdates for seamless update installation
- Public key automatically injected by GitHub Actions during release

Release Automation:
- Install Sparkle CLI tools (brew install sparkle)
- Generate/use EdDSA keys for signing updates
- Sign ZIP files with EdDSA signature
- Auto-generate appcast.xml with version info, download URLs, and signatures
- Inject public key into Info.plist during build
- Commit appcast.xml back to main branch after release

User Experience:
- Non-intrusive automatic update checks on launch
- Standard Sparkle UI with Install/Skip/Remind options
- Secure signature verification prevents malicious updates
- Development builds show friendly message directing to GitHub Releases
- Seamless download and installation with app relaunch

Documentation:
- Add SPARKLE_SETUP.md with complete setup guide
- Add SPARKLE_TODO.md with next steps for adding package
- Add README_SPARKLE_ADDITION.md for quick reference
- Update .gitignore to protect private keys

Technical Details:
- AppKit import added for NSAlert dialogs
- Error handling prevents crashes when public key missing
- Updater only initializes in release builds with valid keys
- Feed URL: https://raw.githubusercontent.com/rdpr/GhostKey/main/appcast.xml
-

--- a/GhostKey/Info.plist
+++ b/GhostKey/Info.plist
@@ -15,5 +15,13 @@
 	<string>NSApplication</string>
 	<key>NSAppleEventsUsageDescription</key>
 	<string>GhostKey needs accessibility access to type authentication codes.</string>
+	<key>SUFeedURL</key>
+	<string>https://raw.githubusercontent.com/rdpr/GhostKey/main/appcast.xml</string>
+	<key>SUEnableAutomaticChecks</key>
+	<true/>
+	<key>SUAllowsAutomaticUpdates</key>
+	<true/>
+	<key>SUScheduledCheckInterval</key>
+	<integer>86400</integer>
 </dict>
 </plist>
