--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -173,6 +173,8 @@ jobs:
     - name: Sign ZIP for Sparkle
       if: steps.check_tag.outputs.exists == 'false'
       run: |
+        set +e  # Don't exit on error, we want to capture it
+        
         echo "🔐 Signing ZIP with EdDSA..."
         
         PRIVATE_KEY="${{ steps.sparkle_keys.outputs.private_key }}"
@@ -182,23 +184,36 @@ jobs:
         echo "🔍 ZIP file: $ZIP_FILE"
         ls -lh "$ZIP_FILE" || echo "❌ ZIP file not found!"
         echo "🔍 Private key length: ${#PRIVATE_KEY}"
+        echo "🔍 Private key preview: ${PRIVATE_KEY:0:10}...${PRIVATE_KEY: -10}"
         echo "🔍 sign_update location: $(which sign_update)"
         
-        # Sign the ZIP with the private key
-        echo "🔐 Running sign_update..."
-        SIGNATURE=$(sign_update "$ZIP_FILE" "$PRIVATE_KEY" 2>&1)
+        # Test sign_update exists and is executable
+        if [ ! -x "$(which sign_update)" ]; then
+          echo "❌ sign_update not found or not executable"
+          exit 1
+        fi
+        
+        # Sign the ZIP with the private key - capture to file to see full output
+        echo "🔐 Running: sign_update \"$ZIP_FILE\" \"<PRIVATE_KEY>\""
+        sign_update "$ZIP_FILE" "$PRIVATE_KEY" > /tmp/sign_output.txt 2>&1
         EXIT_CODE=$?
         
         echo "🔍 Exit code: $EXIT_CODE"
-        echo "🔍 Output: $SIGNATURE"
+        echo "🔍 Output from sign_update:"
+        cat /tmp/sign_output.txt
         
-        if [ $EXIT_CODE -eq 0 ] && [ -n "$SIGNATURE" ]; then
-          echo "signature=$SIGNATURE" >> $GITHUB_OUTPUT
-          echo "✅ ZIP signed successfully"
-          echo "🔍 Signature: ${SIGNATURE:0:50}..."
+        if [ $EXIT_CODE -eq 0 ]; then
+          SIGNATURE=$(cat /tmp/sign_output.txt | tr -d '\n\r')
+          if [ -n "$SIGNATURE" ]; then
+            echo "signature=$SIGNATURE" >> $GITHUB_OUTPUT
+            echo "✅ ZIP signed successfully"
+            echo "🔍 Signature (first 50 chars): ${SIGNATURE:0:50}..."
+          else
+            echo "❌ Signature is empty"
+            exit 1
+          fi
         else
-          echo "❌ Signature generation failed with exit code $EXIT_CODE"
-          echo "❌ Error output: $SIGNATURE"
+          echo "❌ sign_update failed with exit code $EXIT_CODE"
           exit 1
         fi
       id: sign_zip
