fix: add version keys to Info.plist
- Add CFBundleShortVersionString and CFBundleVersion to Info.plist (default 1.0.0)
- Update workflow to try Set first, fallback to Add if key doesn't exist
- This fixes the 'Entry Does Not Exist' error during build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,8 +80,11 @@ jobs:
         VERSION="${{ steps.version.outputs.version }}"
         
         # Set version in Info.plist before building
-        /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $VERSION" GhostKey/Info.plist
-        /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $VERSION" GhostKey/Info.plist
+        /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $VERSION" GhostKey/Info.plist 2>/dev/null || \
+        /usr/libexec/PlistBuddy -c "Add :CFBundleShortVersionString string $VERSION" GhostKey/Info.plist
+        
+        /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $VERSION" GhostKey/Info.plist 2>/dev/null || \
+        /usr/libexec/PlistBuddy -c "Add :CFBundleVersion string $VERSION" GhostKey/Info.plist
         
         echo "✅ Version set to $VERSION in Info.plist"
         
