--- a/GhostKey/Info.plist
+++ b/GhostKey/Info.plist
@@ -25,5 +25,9 @@
 	<integer>86400</integer>
 	<key>SUPublicEDKey</key>
 	<string>QoKujmo/JsKLgma1uSy1SFkcwFK2chU7kDcoS5B+km8=</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0.0</string>
+	<key>CFBundleVersion</key>
+	<string>1.0.0</string>
 </dict>
 </plist>
